# medical_vision

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
data/models/densenet/: densenet121-config.json
docs/: user_guide.md
examples/: CMakeLists.txt  basic_example.cpp
gui/: main.cpp  main_window.cpp  main_window.hpp
gui/widgets/: analysis_panel.cpp  analysis_panel.hpp  feature_panel.cpp  feature_panel.hpp  histogram_viewer.cpp  histogram_viewer.hpp  image_viewer.cpp  image_viewer.hpp  processing_panel.cpp  processing_panel.hpp  segmentation_panel.cpp  segmentation_panel.hpp
include/medical_vision/: chest_x_ray_analyzer.hpp  feature_detector.hpp  image_preprocessor.hpp  segmentation.hpp
src/: chest_x_ray_analyzer.cpp  feature_detector.cpp  image_preprocessor.cpp  segmentation.cpp
